feat: ingest OTLP traces
